# crafting-interpreters

./: .gitignore  CMakeLists.txt  Makefile  expr.c  expr.h  expressions.lox  lex.c  lex.h  log.c  log.h  lox  lox.c  lox.h  main.c  main.lox  parser.c  parser.h  token.c  token.h  utils.c  utils.h
include/: arena.h  file.h  logger.h  type_defs.h  utils.h
tests/: 02_arithmetic.expected  03_unary.expected  04_comparison.expected  04_comparison.lox  06_logical.expected  08_precedence.expected  09_string_concatenation.lox  10_complex_expressions.expected  10_complex_expressions.lox  11_edge_cases.expected  12_division_by_zero.lox  13_comma_expression.lox  run-tests.js
tests/eval/: 01_literals.expected  01_literals.lox  02_arithmetic.lox  03_unary.expected  03_unary.lox  04_comparison.expected  05_equality.expected  05_equality.lox  06_logical.expected  06_logical.lox  07_ternary.expected  07_ternary.lox  08_precedence.expected  08_precedence.lox  09_string_concatenation.expected  10_complex_expressions.expected  11_edge_cases.expected  11_edge_cases.lox  14_print_statement.expected  14_print_statement.lox  15_var_declaration.expected  15_var_declaration.lox  16_undefined_var.expected  16_undefined_var.lox  17_var_assignment.lox  18_var_undefined_invalid_scope.lox  19_block.lox  20_uninitialized_variable_access.expected  20_uninitialized_variable_access.lox  21_if_stmt.lox  22_while_stmt.lox  23_for_stmt.lox  24_break_stmt.lox  25_fun.expected  25_fun.lox  26_lexical_scope.lox  27_class.expected  27_class.lox
tests/parser/: 01_missing_semicolon.expected  02_missing_operand.expected  02_missing_operand.lox  03_unterminated_string.expected  03_unterminated_string.lox  04_invalid_number.expected  04_invalid_number.lox  05_unterminated_comment.lox  06_missing_parentheses.expected  06_missing_parentheses.lox  07_incomplete_ternary.expected  07_incomplete_ternary.lox  08_unexpected_token.expected  (+36 more)
